--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="indexstyle.css">
 </head>
 <body>
-<p>WIP</p>
+<p>WIP
+<a href="toynnyugen.github.io">Resume</a></p>
 </body>
 </html>
