--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <p>WIP
-<a href="toynnyugen.github.io">Resume</a></p>
+<a href="https://www.paypal.me/toynnyugen">Resume</a></p>
 </body>
 </html>
