--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 <p>WIP
-<a href="https://www.paypal.me/toynnyugen">Resume</a></p>
+<ul>
+  <li><a href="https://docs.google.com/document/d/1b6aJG5VJDYKVlN19eNxq3fgASI_9085wHFGTLnCzDJk/edit?usp=sharing">Resume</a>
+  <li><a href="https://www.paypal.me/toynnyugen">PayPal</a></p></ul>
 </body>
 </html>
