--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <p>WIP
 <ul>
   <li><a href="https://docs.google.com/document/d/1b6aJG5VJDYKVlN19eNxq3fgASI_9085wHFGTLnCzDJk/edit?usp=sharing">Resume</a>
-  <li><a href="https://www.paypal.me/toynnyugen">PayPal</a></p></ul>
+  <li>Venmo @tyonngyuen
+</ul>
 </body>
 </html>
