--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
 <link rel="stylesheet" type="text/css" href="indexstyle.css">
 </head>
 <body>
-<p>WIP
+<p>
+<center><h1>Tony Nguyen</h1></center>
+<center><h3>Generic name. Explosive diarrhea overdrive. Different thinking.</h3></center>
+<h2>Documents</h2>
 <ul>
   <li><a href="https://docs.google.com/document/d/1b6aJG5VJDYKVlN19eNxq3fgASI_9085wHFGTLnCzDJk/edit?usp=sharing">Resume</a>
-  <li>Venmo @tyonngyuen
+  <li><a href="https://docs.google.com/document/d/1SjjE-FLH9DuiLziJKH3U-RiCz7DFVPN9HUc_rMCx9JY/edit?usp=sharing">Cover Letter</a>
+  <li><a href="https://docs.google.com/document/d/1rqt-370GU86bGmFeFP64O2TNFjrlDJO2QgBtDTlPrgc/edit?usp=sharing">Personal Statement</a>
 </ul>
+<h2>Daily Schedule (StC)</h2>
+<ol>
+  <li>M-mailing
+  <li>T-thinking
+  <li>W-working
+  <li>R-reading
+  <li>F-finding
+  <li>S-sorting
+  <li>U-uploading
+</ol>
+<p>
+<u>Connections</u>
+<br>-PHP Agency, Inc.: met Kevin Hart
+<br>-Route 44 Skateboards: developed their website & drove e-commerce
+<br>-ET Enterprises: Everette Taylor, CEO
+</p>
+<p><center>Last Updated: 01/22/2019</center></p>
+</ol>
 </body>
 </html>
