--- a/index.html
+++ b/index.html
@@ -4,31 +4,44 @@
 <link rel="stylesheet" type="text/css" href="indexstyle.css">
 </head>
 <body>
-<p>
 <center><h1>Tony Nguyen</h1></center>
-<center><h3>Generic name. Explosive diarrhea overdrive. Different thinking.</h3></center>
-<h2>Documents</h2>
+<center><h3>Generic name ::: Explosive diarrhea overdrive ::: Different thinking</h3></center>
+<p>
+<h2><U>Documents</U></h2>
 <ul>
   <li><a href="https://docs.google.com/document/d/1b6aJG5VJDYKVlN19eNxq3fgASI_9085wHFGTLnCzDJk/edit?usp=sharing">Resume</a>
   <li><a href="https://docs.google.com/document/d/1SjjE-FLH9DuiLziJKH3U-RiCz7DFVPN9HUc_rMCx9JY/edit?usp=sharing">Cover Letter</a>
   <li><a href="https://docs.google.com/document/d/1rqt-370GU86bGmFeFP64O2TNFjrlDJO2QgBtDTlPrgc/edit?usp=sharing">Personal Statement</a>
-</ul>
-<h2>Daily Schedule (StC)</h2>
-<ol>
-  <li>M-mailing
-  <li>T-thinking
-  <li>W-working
-  <li>R-reading
-  <li>F-finding
-  <li>S-sorting
-  <li>U-uploading
-</ol>
+</ul></p>
 <p>
-<u>Connections</u>
-<br>-PHP Agency, Inc.: met Kevin Hart
-<br>-Route 44 Skateboards: developed their website & drove e-commerce
+<h2><U>Daily Schedule (StC)</U></h2>
+<form action="//www.html.am/html-codes/textboxes/submitted.cfm">
+<textarea name="myTextBox" cols="50" rows="7" style="border-top:3px double #000000;border-right:1px dotted #000000;border-bottom:5px double #F7730E;border-left:10px solid #F7730E;">
+  1) M-mailing
+  2) T-thinking
+  3) W-working
+  4) R-reading
+  5) F-finding
+  6) S-sorting
+  7) U-uploading
+</textarea>
+<br />
+<input type="submit" />
+</form>
+<p>
+<U>Connections</U>
+<br>-PHP Agency, Inc.: "met" Kevin Hart
+<br>-Route 44 Skateboards: developed website & drove e-commerce
 <br>-ET Enterprises: Everette Taylor, CEO
+<br>-Social Media: Unavailable upon request
 </p>
+<p>
+<U>Continuous Projects</U>
+<ol>
+  <li>Messing around with HTML/CSS (learning computer science).
+  <li>Recovery phase (1/4).
+  <li>Egg calculations.
+</ol>
 <p><center>Last Updated: 01/22/2019</center></p>
 </ol>
 </body>
