--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="indexstyle.css">
 </head>
 <body>
-<center><h1>Tony Nguyen</h1></center>
+<center><h1><span style="color:red;">To</span><span style="color:orange;">ny</span> <span style="color:yellow;">N</span><span style="color:green;">g</span><span style="color:blue;">u</span><span style="color:gray;">y</span><span style="color:indigo;">e</span><span style="color:violet;">n</span></h1></center>
 <center><h3>Generic name ::: Explosive diarrhea overdrive ::: Different thinking</h3></center>
 <p>
 <h2><U>Documents</U></h2>
@@ -14,7 +14,7 @@
   <li><a href="https://docs.google.com/document/d/1rqt-370GU86bGmFeFP64O2TNFjrlDJO2QgBtDTlPrgc/edit?usp=sharing">Personal Statement</a>
 </ul></p>
 <p>
-<h2><U>Daily Schedule (StC)</U></h2>
+<h2><U>Daily Schedule</U></h2>
 <form action="//www.html.am/html-codes/textboxes/submitted.cfm">
 <textarea name="myTextBox" cols="50" rows="7" style="border-top:3px double #000000;border-right:1px dotted #000000;border-bottom:5px double #F7730E;border-left:10px solid #F7730E;">
   1) M-mailing
