--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <center><h1><span style="color:red;">To</span><span style="color:orange;">ny</span> <span style="color:yellow;">N</span><span style="color:green;">g</span><span style="color:blue;">u</span><span style="color:gray;">y</span><span style="color:indigo;">e</span><span style="color:violet;">n</span></h1></center>
-<center><h3>Generic name ::: Explosive diarrhea overdrive ::: Different thinking</h3></center>
+<center><h3><span style="background-color:black;">Generic name ::: Explosive diarrhea overdrive ::: Different thinking</span></h3></center>
 <p>
 <h2><U>Documents</U></h2>
 <ul>
@@ -38,8 +38,8 @@
 <p>
 <U>Continuous Projects</U>
 <ol>
-  <li>Messing around with HTML/CSS (learning computer science).
-  <li>Recovery phase (1/4).
+  <li>Messing around with HTML/CSS.
+  <li>Q1: Recovery phase.
   <li>Egg calculations.
 </ol>
 <p><center>Last Updated: 01/22/2019</center></p>
