--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!doctype html>
+<!DOCTYPE HTML>
+<!-- You're looking at the source code. Go a way ! >:( -->
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="indexstyle.css">
