--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!-- You're looking at the source code. Go a way. Hire me already! -->
+<!-- You're looking at the source code. Go a way. Hire me already! >:)-->
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="indexstyle.css">
