--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!-- You're looking at the source code. Go a way. Hire me already! >:)-->
+<!-- You're looking at the source code. Go a way. Hire me already! >:) -->
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="indexstyle.css">
@@ -8,16 +8,19 @@
 <center><h1><span style="color:red;">To</span><span style="color:orange;">ny</span> <span style="color:yellow;">N</span><span style="color:green;">g</span><span style="color:blue;">u</span><span style="color:gray;">y</span><span style="color:indigo;">e</span><span style="color:violet;">n</span></h1></center>
 <center><h3><span style="background-color:black;">Generic name ::: Explosive diarrhea overdrive ::: Different thinking</span></h3></center>
 <p>
-<h2><U>Documents</U></h2>
+<h2><U>Cool Documents & Websites</U></h2>
 <ul>
   <li><a href="https://docs.google.com/document/d/1b6aJG5VJDYKVlN19eNxq3fgASI_9085wHFGTLnCzDJk/edit?usp=sharing">Resume</a>
   <li><a href="https://docs.google.com/document/d/1SjjE-FLH9DuiLziJKH3U-RiCz7DFVPN9HUc_rMCx9JY/edit?usp=sharing">Cover Letter</a>
   <li><a href="https://docs.google.com/document/d/1rqt-370GU86bGmFeFP64O2TNFjrlDJO2QgBtDTlPrgc/edit?usp=sharing">Personal Statement</a>
+  <li><a href="https://libraryofbabel.info/">Library of Babel</a>
+  <li><a href="https://www.un.org/en/universal-declaration-human-rights/index.html">Universal Declaration of Human Rights</a>
+  <li><a href="http://info.cern.ch/">World's First Website</a>
 </ul></p>
 <p>
-<h2><U>Daily Schedule</U></h2>
+<h2><U>Hot Daily Schedule</U></h2>
 <form action="//www.html.am/html-codes/textboxes/submitted.cfm">
-<textarea name="myTextBox" cols="50" rows="7" style="border-top:3px double #000000;border-right:1px dotted #000000;border-bottom:5px double #F7730E;border-left:10px solid #F7730E;">
+<textarea name="myTextBox" cols="50" rows="7" style="border-top:3px double #000000;border-right:1px dotted #000000;border-bottom:5px double #C0C0C0;border-left:10px solid #C0C0C0;">
   1) M-mailing
   2) T-thinking
   3) W-working
@@ -31,9 +34,10 @@
 </form>
 <p>
 <U>Connections</U>
-<br>-PHP Agency, Inc.: "met" Kevin Hart
+<br>-Vanderbilt University: literature nerds
+<br>-PHP Agency, Inc.: "met" Kevin Hart <span style='background: white; color: white'>(not really)</span>
 <br>-Route 44 Skateboards: developed website & drove e-commerce
-<br>-ET Enterprises: Everette Taylor, CEO
+<br>-Canada and England: computer & electronics geeks
 <br>-Social Media: Unavailable upon request
 </p>
 <p>
@@ -43,6 +47,7 @@
   <li>Q1: Recovery phase.
   <li>Egg calculations.
 </ol>
+<!-- automation, robotics, AI, the Internet of Things, blockchain, renewable energy, bioscnece -->
 <p><center>Last Updated: 01/22/2019</center></p>
 </ol>
 </body>
