--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE HTML>
-<!-- You're looking at the source code. Go a way! -->
-<title>Level 20</title>
+<!-- You're looking at the source code. Go a way! Hire me already. -->
 <html>
+
 <head>
 <link rel="stylesheet" type="text/css" href="indexstyle.css">
+<title>Tony?</title>
+<meta name="author" content="Shinji">
 </head>
 <body>
 <center><h1><span style="color:red;">To</span><span style="color:orange;">ny</span> <span style="color:yellow;">N</span><span style="color:green;">g</span><span style="color:blue;">u</span><span style="color:gray;">y</span><span style="color:indigo;">e</span><span style="color:violet;">n</span></h1></center>
