--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE HTML>
-<!-- You're looking at the source code. Go a way! Hire me already. -->
+<!-- You're looking at the source code. Go a way!-->
 <html>
 
 <head>
 <link rel="stylesheet" type="text/css" href="indexstyle.css">
 <title>Tony?</title>
-<meta name="author" content="Shinji">
+<meta name="author" content="Shin">
 </head>
+
 <body>
-<center><h1><span style="color:red;">To</span><span style="color:orange;">ny</span> <span style="color:yellow;">N</span><span style="color:green;">g</span><span style="color:blue;">u</span><span style="color:gray;">y</span><span style="color:indigo;">e</span><span style="color:violet;">n</span></h1></center>
+<center><img src = "slipworm.gif">
+<h1><img src = "reslnc.png" width = "20" height = "20"><span style="color:red;">To</span><span style="color:orange;">ny</span> <span style="color:yellow;">N</span><span style="color:green;">g</span><span style="color:blue;">u</span><span style="color:gray;">y</span><span style="color:indigo;">e</span><span style="color:violet;">n</span><img src = "empowerune.png" width = "20" height = "20"></h1></center>
 <center><h3><span style="background-color:black; color:brown;">Generic name ::: Explosive diarrhea overdrive ::: Different thinking</span></h3></center>
 <p>
 <h2><U>Cool Documents & Websites</U></h2>
@@ -52,7 +54,7 @@
   <li>Egg calculations.
 </ol>
 <!-- automation, robotics, AI, the Internet of Things, blockchain, renewable energy, bioscnece -->
-<p><center>Last Updated: 01/23/2019</center></p>
+<p><center>Last Updated: 01/28/2019</center></p>
 </ol>
 </body>
 </html>
