--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1><img src = "reslnc.png" width = "20" height = "20"><span style="color:red;">To</span><span style="color:orange;">ny</span> <span style="color:yellow;">N</span><span style="color:green;">g</span><span style="color:blue;">u</span><span style="color:gray;">y</span><span style="color:indigo;">e</span><span style="color:violet;">n</span><img src = "empowerune.png" width = "20" height = "20"></h1></center>
 <center><h3><span style="background-color:black; color:brown;">Generic name ::: Explosive diarrhea overdrive ::: Different thinking</span></h3></center>
 <p>
-<h2><U>Cool Documents & Websites</U></h2>
+<h2><U>Cool Documents & Links</U></h2>
 <ul>
   <li><a href="https://docs.google.com/document/d/1b6aJG5VJDYKVlN19eNxq3fgASI_9085wHFGTLnCzDJk/edit?usp=sharing">Resume</a>
   <li><a href="https://docs.google.com/document/d/1SjjE-FLH9DuiLziJKH3U-RiCz7DFVPN9HUc_rMCx9JY/edit?usp=sharing">Cover Letter</a>
@@ -22,6 +22,7 @@
   <li><a href="https://libraryofbabel.info/">Library of Babel</a>
   <li><a href="https://www.un.org/en/universal-declaration-human-rights/index.html">Universal Declaration of Human Rights</a>
   <li><a href="http://info.cern.ch/">World's First Website</a>
+  <li><a href="http://www.usdebtclock.org/">Not an Atomic Clock</a>
 </ul></p>
 <p>
 <h2><U>Hot Daily Schedule</U></h2>
