--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<center><img src = "slipworm.gif">
+<center>
 <h1><img src = "reslnc.png" width = "20" height = "20"><span style="color:red;">To</span><span style="color:orange;">ny</span> <span style="color:yellow;">N</span><span style="color:green;">g</span><span style="color:blue;">u</span><span style="color:gray;">y</span><span style="color:indigo;">e</span><span style="color:violet;">n</span><img src = "empowerune.png" width = "20" height = "20"></h1></center>
 <center><h3><span style="background-color:black; color:brown;">Generic name ::: Explosive diarrhea overdrive ::: Different thinking</span></h3></center>
 <p>
