--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1><img src = "reslnc.png" width = "20" height = "20"><span style="color:red;">To</span><span style="color:orange;">ny</span> <span style="color:yellow;">N</span><span style="color:green;">g</span><span style="color:blue;">u</span><span style="color:gray;">y</span><span style="color:indigo;">e</span><span style="color:violet;">n</span><img src = "empowerune.png" width = "20" height = "20"></h1></center>
 <center><h3><span style="background-color:black; color:brown;">Generic name ::: Explosive diarrhea overdrive ::: Different thinking</span></h3></center>
 <p>
-<h2><U>Cool Documents & Links</U></h2>
+<h2><U>Docs & Links</U></h2>
 <ul>
   <li><a href="https://docs.google.com/document/d/1b6aJG5VJDYKVlN19eNxq3fgASI_9085wHFGTLnCzDJk/edit?usp=sharing">Resume</a>
   <li><a href="https://docs.google.com/document/d/1SjjE-FLH9DuiLziJKH3U-RiCz7DFVPN9HUc_rMCx9JY/edit?usp=sharing">Cover Letter</a>
@@ -24,36 +24,6 @@
   <li><a href="https://libraryofbabel.info/">Library of Babel</a>
   <li><a href="http://www.usdebtclock.org/">Not an Atomic Clock</a>
 </ul></p>
-<p>
-<h2><U>Hot Daily Schedule</U></h2>
-<form action="//www.html.am/html-codes/textboxes/submitted.cfm">
-<textarea name="myTextBox" cols="50" rows="7" style="border-top:3px double #000000;border-right:1px dotted #000000;border-bottom:5px double #C0C0C0;border-left:10px solid #C0C0C0;">
-  1) M-mailing
-  2) T-thinking
-  3) W-working
-  4) R-reading
-  5) F-finding
-  6) S-sorting
-  7) U-uploading
-</textarea>
-<br />
-<input type="submit" />
-</form>
-<p>
-<U>Connections</U>
-<br>-Vanderbilt University: literature nerds
-<br>-PHP Agency, Inc.: "met" Kevin Hart <span style='background: white; color: white'>(not really)</span>
-<br>-Route 44 Skateboards: developed website & drove e-commerce
-<br>-Canada and England: computer & electronics geeks
-<br>-Social Media: Unavailable upon request
-</p>
-<p>
-<U>Continuous Projects</U>
-<ol>
-  <li>Messing around with HTML/CSS.
-  <li>Q1: Recovery phase.
-  <li>Egg calculations.
-</ol>
 <!-- automation, robotics, AI, the Internet of Things, blockchain, renewable energy, bioscnece -->
 <p><center>Last Updated: 01/30/2019</center></p>
 </ol>
