--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <li><a href="http://info.cern.ch/">World's First Website</a>
   <li><a href="https://libraryofbabel.info/">Library of Babel</a>
   <li><a href="http://www.usdebtclock.org/">Not an Atomic Clock</a>
+  <li><a href='https://www.gatesnotes.com/2019-Annual-Letter/'>Letter Writing 101</a>
 </ul></p>
 <!-- automation, robotics, AI, the Internet of Things, blockchain, renewable energy, bioscnece -->
 <p><center>Last Updated: 01/30/2019</center></p>
